Tweak `EmpiricalComparison.ipynb`: clarify speedup
Overall speedup is distinct from per-query speedup. The notebook now
clarifies this distinction.

--- a/analysis/EmpiricalComparison.ipynb
+++ b/analysis/EmpiricalComparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -35,50 +35,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NaiveDifferential Duration    7.985080\n",
-       "BloomDifferential Duration    6.709179\n",
-       "InDiffFile?                   0.106888\n",
-       "InFilter?                     0.131433\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup = df['NaiveDifferential Duration'] / df['BloomDifferential Duration']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8402143705065146"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['BloomDifferential Duration'].mean() / df['NaiveDifferential Duration'].mean()"
+    "per_query_speedup.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "overall_speedup = df['NaiveDifferential Duration'].sum() / df['BloomDifferential Duration'].sum()\n",
+    "overall_speedup"
    ]
   },
   {
@@ -106,15 +114,6 @@
     "fig = plt.pyplot.gcf()\n",
     "fig.savefig('query_duration_box_plot.png', dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
