Finish first draft of report

--- a/analysis/EmpiricalComparison.ipynb
+++ b/analysis/EmpiricalComparison.ipynb
@@ -48,33 +48,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "per_query_speedup = df['NaiveDifferential Duration'] / df['BloomDifferential Duration']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "per_query_speedup.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "per_query_speedup.std()"
+    "overall_duration = df['NaiveDifferential Duration'].sum() + df['BloomDifferential Duration'].sum()\n",
+    "overall_duration /= (60*60) # Convert to hours.\n",
+    "overall_duration"
    ]
   },
   {
@@ -113,6 +93,78 @@
    "source": [
     "fig = plt.pyplot.gcf()\n",
     "fig.savefig('query_duration_box_plot.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup = df['NaiveDifferential Duration'] / df['BloomDifferential Duration']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ax = per_query_speedup.to_frame().boxplot(column=0, return_type='axes')\n",
+    "ax.set_ylim([0.5, 2.5])\n",
+    "ax.set_xticklabels([\"\"])\n",
+    "ax.set_ylabel(\"Query Speedup\")\n",
+    "fig = plt.pyplot.gcf()\n",
+    "fig.set_size_inches(4, 7)\n",
+    "fig.savefig('query_speedup_box_plot.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "per_query_speedup.max()"
    ]
   }
  ],
