--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1,5 +1,5 @@
 @inproceedings{kirsch2006less,
-  title={Less hashing, same performance: Building a better Bloom filter},
+  title={Less Hashing, Same Performance: Building a Better Bloom Filter},
   author={Kirsch, Adam and Mitzenmacher, Michael},
   booktitle={European Symposium on Algorithms},
   pages={456--467},
@@ -15,4 +15,11 @@
     probability. This leads to less computation and potentially less need for
     randomness in practice.
   }
+}
+
+@book{cormen2009introduction,
+  title={Introduction to Algorithms},
+  author={Cormen, Thomas H and Leiserson, Charles E and Rivest, Ronald L and Stein, Clifford},
+  year={2009},
+  publisher={MIT press}
 }
